src/objects/EventApi__Lightning_Event_Page_Template__mdt.object
<CustomObject>
    <description>Templates for Lightning Event Pages.</description>
    <fields>
        <fullName>EventApi__Event_Status_Template__c</fullName>
        <description>** REQUIRED ** Linked to the related Event Status Template MDT.</description>
        <inlineHelpText>** REQUIRED ** Linked to the related Event Status Template MDT.</inlineHelpText>
        <label>Event Status Template</label>
        <referenceTo>EventApi__Event_Status_Template__mdt</referenceTo>
        <relationshipLabel>Lightning Event Page Templates</relationshipLabel>
        <relationshipName>Lightning_Event_Page_Templates</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Enabled_Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, this record will be enabled as a template.</description>
        <inlineHelpText>When checked, this record will be enabled as a template.</inlineHelpText>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this record will become enabled as a template.</description>
        <inlineHelpText>When checked, this record will become enabled as a template.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Navigation_Label__c</fullName>
        <description>** REQUIRED ** The label used for each page in the event&apos;s navigation.</description>
        <inlineHelpText>** REQUIRED ** The label used for each page in the event&apos;s navigation.</inlineHelpText>
        <label>Navigation Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Order__c</fullName>
        <description>** REQUIRED ** Page display order for the related event.</description>
        <inlineHelpText>** REQUIRED ** Page display order for the related event.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Page_Name__c</fullName>
        <description>** REQUIRED ** The page&apos;s heading will change based on the value of this field.</description>
        <inlineHelpText>** REQUIRED ** The page&apos;s heading will change based on the value of this field.</inlineHelpText>
        <label>Page Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Lightning Event Page Template</label>
    <pluralLabel>Lightning Event Page Templates</pluralLabel>
</CustomObject>